--- a/res/layout/events_detail_activity.xml
+++ b/res/layout/events_detail_activity.xml
@@ -147,7 +147,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/place"
+        android:id="@+id/location"
         android:layout_below="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
