--- a/res/drawable-hdpi/calandar_rectangle_internal.xml
+++ b/res/drawable-hdpi/calandar_rectangle_internal.xml
@@ -1,22 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
+    <padding
+        android:bottom="10dp"
+        android:left="33dp"
+        android:right="24dp"
+        android:top="8dp" />
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-  
-    
-    
-    
-    
-    
-    <padding android:left="33dp" android:top="8dp"
-            android:right="24dp" android:bottom="10dp"
-            
-            
-            
-             />
-  
-    <corners android:topLeftRadius="3dp"
-        android:topRightRadius="3dp"
-         />
+    <corners
+        android:topLeftRadius="3dp"
+        android:topRightRadius="3dp" />
+
     <solid android:color="#ff4500" />
-</shape> 
+
+</shape>
