--- a/res/drawable-hdpi/calandar_rectangle_small.xml
+++ b/res/drawable-hdpi/calandar_rectangle_small.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-  
-    
-    
-    
-    
-    
-    <padding android:left="13dp" android:top="4dp"
-            android:right="14dp" android:bottom="3dp"
-             />
-  
+    <padding
+        android:bottom="3dp"
+        android:left="13dp"
+        android:right="14dp"
+        android:top="4dp" />
+
     <corners android:radius="10dp" />
+
     <solid android:color="#ffffff" />
-</shape> 
+
+</shape>
