--- a/res/drawable-hdpi/list_design.xml
+++ b/res/drawable-hdpi/list_design.xml
@@ -1,42 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
- 
-<!-- Bottom 2dp Shadow -->
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <!-- Bottom 2dp Shadow -->
     <item>
-        <shape  android:shape="rectangle">
-            
-           
-          
- <solid android:color="#000000"/> 
-    <padding android:left="5dp" android:top="5dp" android:right="5dp" android:bottom="5dp"
-      
-         /> 
-          
-      
-   
-       
-   
- 
+        <shape android:shape="rectangle" >
+            <solid android:color="#000000" />
+
+            <padding
+                android:bottom="5dp"
+                android:left="5dp"
+                android:right="5dp"
+                android:top="5dp" />
         </shape>
     </item>
-    
-     
- 
+
     <!-- White Top color -->
     <item android:bottom="3px">
- 
-        <shape  android:shape="rectangle">
- 
-        <solid android:color="#cccccc" />
-        <corners android:radius="7dp" />
- 
- 
+        <shape android:shape="rectangle" >
+            <solid android:color="#cccccc" />
+
+            <corners android:radius="7dp" />
         </shape>
- 
     </item>
 
-   
 </layer-list>
-
-
-
