--- a/res/drawable-hdpi/share_rectangle.xml
+++ b/res/drawable-hdpi/share_rectangle.xml
@@ -2,17 +2,11 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
   
-    
-    
-    
-    
-    
-    <padding android:left="35dp" android:top="10dp"
-            android:right="20dp" android:bottom="10dp"
-            
-            
-            
-             />
+    <padding
+        android:bottom="10dp"
+        android:left="35dp"
+        android:right="20dp"
+        android:top="10dp" />
   
     <corners android:radius="3dp" />
     <solid android:color="#ff8c00" />
