--- a/res/layout/events_list_activitiy.xml
+++ b/res/layout/events_list_activitiy.xml
@@ -2,17 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="320dp"
     android:layout_height="100dp"
-    android:orientation="horizontal" 
     android:background="@drawable/list_design"
-    >
-    
-   
-     
+    android:orientation="horizontal" >
+
     <FrameLayout
         android:id="@+id/frame1"
         android:layout_width="wrap_content"
         android:layout_height="100dp" >
-        
+
         <ImageView
             android:id="@+id/img"
             android:layout_width="wrap_content"
@@ -20,88 +17,79 @@
             android:layout_marginLeft="6dp"
             android:layout_marginTop="6dp"
             android:background="@drawable/calendar_rectangle_external" />
-        
-          <ImageView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_marginLeft="6dp"
-              android:layout_marginTop="6dp"
-              android:background="@drawable/calandar_rectangle_internal" />
-          
-           <ImageView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_marginLeft="21dp"
-              android:layout_marginTop="11dp"
-              android:background="@drawable/calandar_rectangle_small" />
 
-        
-        
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="6dp"
+            android:layout_marginTop="6dp"
+            android:background="@drawable/calandar_rectangle_internal" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="21dp"
+            android:layout_marginTop="11dp"
+            android:background="@drawable/calandar_rectangle_small" />
+
         <TextView
-            android:gravity="center"
             android:id="@+id/month"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="28dp"
-           android:textSize="10dp" />
+            android:gravity="center"
+            android:textSize="10dp" />
 
         <TextView
             android:id="@+id/year"
-            android:gravity="center"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="72dp"
+            android:gravity="center"
             android:textSize="8dp" />
 
         <TextView
             android:id="@+id/day"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="39dp"
             android:gravity="center"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
             android:textColor="#000"
-            android:textSize="23dp" />
-
+            android:textSize="23dp"
+            android:textStyle="bold" />
     </FrameLayout>
 
-    
-  
+    <TextView
+        android:id="@+id/hours"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="8dp"
+        android:layout_toRightOf="@+id/frame1"
+        android:textSize="10dp" />
 
-         <TextView
-            android:id="@+id/hours"
-            android:layout_toRightOf="@+id/frame1"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="8dp"
-            android:layout_width="280dp"
-            android:layout_height="wrap_content"
-            android:textSize="10dp" />
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/hours"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="3dp"
+        android:layout_toRightOf="@+id/frame1"
+        android:textSize="15dp"
+        android:textStyle="bold" />
 
-        <TextView
-            
-            android:id="@+id/title"
-            android:layout_toRightOf="@+id/frame1"
-            android:layout_marginLeft="5dp"
-            android:layout_width="280dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/hours"
-            android:layout_marginRight="3dp"
-            android:textSize="15dp"
-            android:textStyle="bold" />
-        
-         <TextView
-            android:id="@+id/location"
-           android:layout_toRightOf="@+id/frame1"
-            android:layout_marginLeft="5dp"
-            android:layout_width="280dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/title"  
-            android:textStyle="italic"
-            android:textSize="14dp" />
+    <TextView
+        android:id="@+id/location"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@+id/frame1"
+        android:textSize="14dp"
+        android:textStyle="italic" />
 
-      
-    </RelativeLayout>
-
+</RelativeLayout>
