--- a/res/layout/events_detail_activity.xml
+++ b/res/layout/events_detail_activity.xml
@@ -20,50 +20,53 @@
                 android:scaleType="fitXY" />
 
             <LinearLayout
+                android:id="@+id/sa"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="27dp"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:orientation="horizontal"
                 android:weightSum="100" >
 
-                <ImageView
+                <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginTop="27dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="70"
-                    android:background="@drawable/datail_rectangle" />
+                    android:orientation="vertical"
+                    android:background="#123456" >
+
+                    <TextView
+                        android:id="@+id/date"
+                        android:layout_marginTop="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="marth 2013"
+                        android:textColor="#FFFFFF"
+                        android:textSize="10dp" />
+
+                    <TextView
+                        
+                        android:id="@+id/hours"
+                        android:layout_below="@+id/date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        
+                        android:text="223424"
+                        android:textColor="#FFFFFF"
+                        android:textSize="10dp" />
+
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="260dp"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/hours"
+                        android:text="kjklljljj"
+                        android:textColor="#ffffff"
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="35dp"
-                android:text="marth 2013"
-                android:textColor="#ffffff"
-                android:textSize="10dp" />
-
-            <TextView
-                android:id="@+id/hours"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="47dp"
-                android:text="223424"
-                android:textColor="#ffffff"
-                android:textSize="10dp" />
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="260dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="61dp"
-                android:text="fjhdfhkdsf"
-                android:textColor="#ffffff"
-                android:textSize="15dp"
-                android:textStyle="bold" />
         </FrameLayout>
 
         <FrameLayout
@@ -71,7 +74,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/frameLayout1"
+            android:layout_below="@+id/sa"
             android:background="#DCDFDC" >
 
             <ImageView
